# GameOfLife_QWidget

./: .gitignore  CMakeLists.txt  GameWidget.cpp  GameWidget.hpp  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp
